<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProTechNeck</string>

    <!-- Text view labels for orientation data -->
    <string name="label_azimuth_string">Azmiuth:</string>
    <string name="label_pitch_string">Pitch:</string>
    <string name="label_roll_string">Roll:</string>

    <!-- String for the orientation values. The %1$.2f part is a placeholder
     that will be filled in at runtime:
     %1 is the value to replace
     $.2f says the value is a float, with two decimal places.  -->
    <string name="value_format">%1$.2f</string>

    <string name="raise_phone_instruction">Raise phone to eye level to a better neck position. \nMove your head, not just your eyes.</string>
    <string name="tech_neck_description">Helping you avoid neck strain.</string>
    <string name="title_activity_tech_neck" tools:ignore="ExtraTranslation">TechNeckActivity</string>

    <string name="posture_type_bad">Lift your phone up!</string>
    <string name="posture_type_okay">Becareful</string>
    <string name="posture_type_good">Good job. As you were</string>
    <string name="posture_type_bad_description">You are currently either looking directly down at your phone, or can’t see anything on the screen. Doing this for extended period will lead to neck strain.</string>
    <string name="posture_type_okay_description">Ensure you don’t fall into bad habits. Lift your phone up to eye level, you are almost there.</string>
    <string name="posture_type_good_description">This is exactly where you want to be, keep it up.</string>

    <!-- ONBOARDING -->
    <string name="app_title">Protek Neck</string>
    <string name="app_description">Pro-actively protecting necks from strain</string>
    <string name="get_started">Get started</string>
    <string name="btn_continue">Continue</string>

    <string name="onboarding_page_1_title">Who is this for?</string>
    <string name="onboarding_page_2_title">What does it do?</string>
    <string name="onboarding_page_1_description">This is for anyone who struggles with neck pain and strain on a daily basis. This app can be used to break the bad habit of looking down at your phone.</string>
    <string name="onboarding_page_2_description">Based on your preferred settings, the app will alert you when you are using your device while adopting bad posture, and guide you back into the correct posture.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- SETTINGS -->
    <string name="settings_allow">I allow this</string>
    <string name="settings_background_permission">Background permission</string>
    <string name="settings_background_permission_description">In order for this to work, you have to allow the app to run in the bacjground. This is the only way it can pick up your posture</string>
    <string name="settings_strictness">Strictness</string>
    <string name="settings_strictness_description">These settings determine how strict the app is. We understand this app can be intrusive, so it is up to you just how intrusive it is</string>
    <string name="settings_very_strict">Very strict</string>
    <string name="settings_not_so_strict">Not so strict</string>
    <string name="settings_leniant">Leniant</string>
    <string name="loading">Loading</string>

</resources>
