<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.SettingsActivity"
    tools:showIn="@layout/activity_settings2">

    <ScrollView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/gutterSpaceDouble"
                android:paddingRight="@dimen/gutterSpaceDouble"
                android:paddingTop="@dimen/gutterSpaceDouble"
                android:text="@string/settings_background_permission"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/gutterSpaceDouble"
                android:text="@string/settings_background_permission_description"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/gutterSpaceDouble">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_allow"
                    android:textSize="12sp" />

                <CheckBox
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background"
                android:backgroundTint="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/gutterSpaceDouble"
                android:paddingRight="@dimen/gutterSpaceDouble"
                android:paddingTop="@dimen/gutterSpaceDouble"
                android:text="@string/settings_strictness"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/gutterSpaceDouble"
                android:text="@string/settings_strictness_description"
                android:textSize="14sp" />


            <RadioGroup
                android:id="@+id/strictness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/gutterSpaceDouble"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/strict"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/radio_flat_text_selector"
                    android:background="@drawable/radio_flat_selector"
                    android:text="@string/settings_very_strict"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/not_so_strict"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/radio_flat_text_selector"
                    android:background="@drawable/radio_flat_selector"
                    android:text="@string/settings_not_so_strict"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/lemiant"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/radio_flat_text_selector"
                    android:background="@drawable/radio_flat_selector"
                    android:text="@string/settings_leniant"
                    android:button="@null" />
            </RadioGroup>


            <Button
                android:layout_gravity="center"
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Widget.AppCompat.Button"
                android:text="@string/btn_continue"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>