<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NeckFeedbackActivity"
    android:id="@+id/container"
    tools:showIn="@layout/activity_tech_neck">

    <!--<com.airbnb.lottie.LottieAnimationView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:lottie_autoPlay="true"-->
        <!--app:lottie_loop="true"-->
        <!--app:lottie_fileName="emoji_tongue.json"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tech_neck_description"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingBottom="@dimen/gutterSpace"
        android:layout_marginBottom="@dimen/gutterSpace"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        android:padding="@dimen/gutterSpace"
        android:textColor="#FFFFFF"
        android:text="@string/raise_phone_instruction"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Widget.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/gutterSpaceDouble"
        android:text="@string/btn_continue"/>

</androidx.constraintlayout.widget.ConstraintLayout>