<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.protechneck.MainActivity">

    <LinearLayout
        android:paddingTop="64dp"
        android:id="@+id/app_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textSize="14sp"/>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboarding_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintBottom_toTopOf="@+id/bottom_section" />


    <LinearLayout
        android:id="@+id/bottom_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="32dp">

        <com.pixelcan.inkpageindicator.InkPageIndicator
            android:id="@+id/onboarding_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            app:ipi_currentPageIndicatorColor="@color/colorPrimary"
            app:ipi_pageIndicatorColor="@color/cardview_dark_background"
            android:paddingBottom="@dimen/gutterSpaceDouble"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/get_started"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>